[metadata]
name = targomiko
version = 0.2.0
author = Luca Corbatto
author_email = luca@corbatto.de
url = https://github.com/targodan/targomiko
description = My package description
long_description = file: README.md
long_description_content_type = text/markdown
keywords = one, two
license_files = LICENSE
license = MIT

[options]
packages = find:
install_requires = wheel
